# libavcpp

./: .travis.yml  CMakeLists.txt  README.md  libav++.kdev4
Dependencies/: multiarch-support_2.13-33_amd64.deb
Dependencies/lame/: lame_3.98.4-0.0_amd64.deb  libmp3lame-dev_3.98.4-0.0_amd64.deb  libmp3lame0_3.98.4-0.0_amd64.deb
docs/: libav++.doxy
examples/: CMakeLists.txt  decoder.cpp  encoder.cpp  img2ppm.cpp  ogl_cube.cpp
include/: audiofiltergraph.h  avapplication.h  avcolor.h  avcommon.h  avdecoder.h  avencoder.h  avfile.h  avfiltergraph.h  avfps.h  avframe.h  avimage.h  avinputfile.h  avoutputfile.h  avpoint.h  avrect.h  avsample.h  iavfiltergraph.h  videofiltergraph.h
src/: audiofiltergraph.cpp  avapplication.cpp  avcolor.cpp  avcommon.cpp  avdecoder.cpp  avencoder.cpp  avfile.cpp  avfiltergraph.cpp  avfps.cpp  avframe.cpp  avimage.cpp  avinputfile.cpp  avoutputfile.cpp  avpoint.cpp  avrect.cpp  avsample.cpp  iavfiltergraph.cpp  videofiltergraph.cpp
